[package]
name = "eastwind-blogger"
authors = ["Zhongdong Yang"]
description = "A Rust implementation for Eastwind Blogger"
version = "2.3.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/zhongdongy/docker-blogger/"
homepage = "https://github.com/zhongdongy/docker-blogger/"
include = ["/src", "/templates", "/static", "favicon.ico"]


[features]
default = ["core"]
core = []
bundled = []


[dependencies]
pulldown-cmark = { version = "0.9.3", default-features = false, features = [
  "simd",
] }
pulldown-cmark-toc = "0.3.0"
serde = { version = "1.0.192", features = ["derive", "std"] }
serde_json = { version = "1.0.108" }
serde_yaml = { version = "0.9.27" }
tera = { version = "1.19.1" }
chrono = { version = "0.4.31" }
regex = "1.10.2"
walkdir = "2.4.0"
md5 = "0.7.0"
actix-web = "4.4.0"
derive_more = "0.99.17"
actix-files = "0.6.2"
lazy_static = "1.4.0"
notify = { version = "6.1.1", default-features = false, features = ["serde"] }
tokio = { version = "1.33.0", features = ["full"] }
futures = "0.3.28"
colored = "2.0.4"
log = "0.4.20"
log4rs = "1.2.0"
quick-xml = "0.31.0"
urlencoding = "2.1.3"
pinyin = "0.10.0"

[lib]
name = "eastwind_blogger"


[[bin]]
name = "eastwind-blogger"
