[package]
name = "eastwind-blogger"
authors = ["Zhongdong Yang"]
description = "A Rust implementation for Eastwind Blogger"
version = "2.3.4"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/zhongdongy/docker-blogger/"
homepage = "https://github.com/zhongdongy/docker-blogger/"
include = ["/src", "/templates", "/static", "favicon.ico"]


[features]
default = ["core"]
core = []
bundled = []


[dependencies]
pulldown-cmark = { version = "0.11.0", default-features = false, features = [
  "simd", "html"
] }
pulldown-cmark-toc = "0.5.0"
serde = { version = "1.0.204", features = ["derive", "std"] }
serde_json = { version = "1.0.122" }
serde_yaml = { version = "0.9.33" }
tera = { version = "1.20.0" }
chrono = { version = "0.4.38" }
regex = "1.10.6"
walkdir = "2.5.0"
md5 = "0.7.0"
actix-web = "4.8.0"
derive_more = "0.99.18"
actix-files = "0.6.6"
lazy_static = "1.5.0"
notify = { version = "6.1.1", default-features = false, features = ["serde"] }
tokio = { version = "1.39.2", features = ["full"] }
futures = "0.3.30"
colored = "2.1.0"
log = "0.4.22"
log4rs = "1.3.0"
quick-xml = "0.36.1"
urlencoding = "2.1.3"
pinyin = "0.10.0"

[lib]
name = "eastwind_blogger"


[[bin]]
name = "eastwind-blogger"
